# Model-Importer

./: .gitignore  CMakeLists.txt  README.md  fragmentShader.glsl  main.c  vertexShader.glsl
.cache/clangd/index/: cube.c.F9BE29FED8690DB4.idx  cube.h.3C8AF69EEB7FF294.idx  main.c.59CA919C1AC10056.idx  matrixStack.c.C55ADE76C82C6046.idx  matrixStack.h.B2D470866A9F9A1D.idx  model.c.4F9E0DBFED5C4A55.idx  model.h.38CABF03EA9A4228.idx  pyramid.c.F3BF0526F68D72D3.idx  pyramid.h.2A819965E366442C.idx  shader.c.18916541B09B3109.idx  shader.h.56F5AFEBEAC5B69A.idx  shape.c.2D9536D73C8A1D61.idx  shape.h.62C90E6B38D8CFCE.idx  sphere.c.A8236327678D6BB9.idx  sphere.h.F455ACBD299DFC3F.idx  stb_image.h.4D139116159B835C.idx  texture.c.DC7F883AB238E403.idx  texture.h.065FCCED9C3337E1.idx  torus.c.EE0ABCE56A615C80.idx  torus.h.5F761F4D71257302.idx
include/: cube.h  matrixStack.h  model.h  pyramid.h  shader.h  shape.h  sphere.h  texture.h  torus.h
include/glad/: glad.h
models/: shuttle.mtl
src/: cube.c  glad.c  matrixStack.c  model.c  pyramid.c  shader.c  shape.c  sphere.c  texture.c  torus.c
